# ChangeLog for games-fps/doom3
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/doom3/ChangeLog,v 1.11 2005/05/25 17:01:11 wolf31o2 Exp $

  25 May 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.3.1302.ebuild:
  Fixing typo and closing bug #93963.

  25 May 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.3.1302.ebuild:
  Added Punkbuster support.

*doom3-1.3.1302 (25 May 2005)

  25 May 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  +doom3-1.3.1302.ebuild:
  Version bump to latest patch and closing bug #93857.

  18 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.1.1286.ebuild:
  Added 3dgamers mirrors and closing bug #89361.

  13 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.1.1286.ebuild:
  Fixed RDEPEND for amd64.

*doom3-1.1.1286 (26 Nov 2004)

  26 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> -files/doom3,
  -doom3-1.1.1282.ebuild, +doom3-1.1.1286.ebuild:
  Version bumped to new patch-level with alsa and amd64 support.

  09 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> :
  Fixing digest

  09 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.1.1282.ebuild:
  Fixed src_unpack before I start getting bugs on it.

  09 Nov 2004; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.1.1282.ebuild:
  Added another mirror and added icon image.

  05 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.1.1282.ebuild:
  Added USE=cdinstall to copy files from the CD and made some other changes to
  bring it inline with my current ebuild style. I want to thank vapier for his
  first ebuild, as it took some of the pressure off me. Closing bug #57067.

*doom3-1.1.1282 (05 Oct 2004)

  05 Oct 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me for #57067.