@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/doom3
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-fps/doom3/ChangeLog,v 1.11 2005/05/25 17:01:11 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-fps/doom3/ChangeLog,v 1.12 2005/05/25 18:00:40 wolf31o2 Exp $
+
+  25 May 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.3.1302.ebuild:
+  Removing RoE junk and closing bug #93969.
 
   25 May 2005; Chris Gianelloni <wolf31o2@gentoo.org> doom3-1.3.1302.ebuild:
   Fixing typo and closing bug #93963.
